--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
-  db:
-    image: postgres:9.0.20
+  postgres_db:
+    image: postgres:15
     ports:
       - "5432:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: level_editor
     volumes:
       - ../db:/var/lib/postgresql/data
