--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,3 +9,12 @@ services:
       POSTGRES_DB: level_editor_local
     volumes:
       - ../db:/var/lib/postgresql/data
+  api:
+    build:
+        context: ../backend
+        dockerfile: Dockerfile
+    ports:
+      - "5433:3000"
+    environment:
+        DATABASE_URL: postgres://postgres:postgres@postgres_db:5432/level_editor_local
+        SECRET_KEY: SUPER_SECRET_KEY
