--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --plugin-search-dir . --write .",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "jest"
+    "test": "jest",
+    "chromatic": "npx chromatic --project-token=f554031343cd"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -30,6 +31,7 @@
     "@testing-library/svelte": "^3.2.2",
     "@testing-library/user-event": "^14.4.3",
     "babel-jest": "^29.5.0",
+    "chromatic": "^6.17.2",
     "jest": "^29.5.0",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
@@ -52,5 +54,7 @@
   "dependencies": {
     "jest-environment-jsdom": "^29.5.0",
     "ts-node": "^10.9.1"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "frontend@0.0.1"
 }
