--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest",
-    "chromatic": "npx chromatic --project-token=f554031343cd"
+    "chromatic": "npx chromatic"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
