--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -28,8 +28,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Build and Deploy Storybook project
-      working-directory: ./frontend
-      run: npm i
-           npm run chromatic
+      run: scripts/publish-storybook.sh
       env:
         CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_KEY }}
