--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -11,19 +11,16 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    env:
+      CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_KEY }}
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with: 
+        node-version: 18
 
-    - name: Build and Deploy Storybook project
-      run: scripts/publish-storybook.sh
-      env:
-        CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_KEY }}
+    - run: scripts/publish-storybook.sh
+     
