add cors settings to backend

--- a/backend/example.env
+++ b/backend/example.env
@@ -1,3 +1,4 @@
 #this is an example env file for use in local development
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/level_editor_local?schema=public"
 SECRET_KEY="MY_SUPER_DUPER_ULTRA_SECRET_KEY"
+CORS_ORIGIN="*"
