--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest",
+    "test:watch": "jest --watch",
     "chromatic": "npx chromatic"
   },
   "devDependencies": {
